# niagara-lang

./: .drom  .gitignore  CHANGES.md  Makefile  README.md  drom.toml  dune-project  niagara-lang-lib.opam  niagara-lang.opam  niagara.opam
.github/workflows/: workflow.yml
doc/: manual.md
docs/: formalisation_contexts.md  index.html
docs/doc/: index.html
docs/sphinx/: index.html
examples/: initialization.nga  non_opp_qp.nga  observable.nga  opposition.nga  sur_un_nuage.nga  sur_un_nuage.test  test.nga  weird_shapes.nga
opam/: niagara-ast.opam  niagara-exec.opam  niagara-interpreter.opam  niagara-lang.opam  niagara-utils.opam  niagara.opam
sphinx/: about.rst  conf.py  index.rst  install.rst
src/: dune  main.ml
src/commons/: binaryDecisionTree.ml  binaryDecisionTree.mli  compilerState.ml  compilerState.mli  condition.ml  condition.mli  context.ml  context.mli  date.ml  dune  errors.ml  errors.mli  intMap.ml  intMap.mli  intSet.ml  intSet.mli  literal.ml  pos.ml  pos.mli  programInfo.ml  programInfo.mli  r.ml  report.ml  report.mli  strMap.ml  strMap.mli  strSet.ml  strSet.mli  valueType.ml  varInfo.ml  varInfo.mli  variable.ml  variable.mli
src/compiler/: activation_propagation.ml  ast_to_eqs.ml  ast_to_ir.ml  ast_to_ir.mli  compile.ml  conditionLifting.ml  conditionLifting.mli  contextualize.ml  contextualize.mli  dune  equationalize.ml  equationalize.mli  genDot.ml  limits.ml  repartition.ml  repartition.mli
src/dataflow/: dune  equ.ml  formatEqu.ml  opposition.ml  opposition.mli  repartition.ml  repartition.mli
src/equations/: dune  equ.ml  formatEqu.ml  repartition.ml  repartition.mli
src/exec/: dune  main.ml  test_interp.ml  testing.ml  testlex.mll
src/frontend/: ast.ml  ast_to_ir.ml  ast_to_ir.mli  binaryDecisionTree.ml  compile.ml  conditionLifting.ml  context.ml  context.mli  contextualize.ml  contextualize.mli  dune  formatAst.ml  formatIr.ml  genDot.ml  interface.ml  interpreter.ml  ir.ml  ir.ml.ignore  lexer.ml  parser.messages  parser.mly  parserMain.ml  test_interp.ml  valueType.ml  variable.ml
src/grammar/: dune  lexer.ml  lexer.mli  parser.messages  parser.mly  parserErrors.mli  parserMain.ml  parserMain.mli
src/internal/: dune  formatIr.ml  interface.ml  interface.mli  ir.ml  ir.mli
src/interpreter/: dune  execution.ml  execution.mli  initialization.ml  input.ml  input.mli  printer.ml  results.ml  results.mli  value.ml
src/niagara/: dune  index.mld  main.ml  package.toml
src/niagara-ast/: binaryDecisionTree.ml  context.ml  contextualize.ml  contextualize.mli  dune  formatAst.ml  index.mld  lexer.ml  package.toml  parserErrors.mli  parserMain.ml  valueType.ml  variable.ml
src/niagara-exec/: ast_to_ir.ml  ast_to_ir.mli  conditionLifting.ml  dune  formatIr.ml  index.mld  interface.ml  interpreter.ml  ir.ml  package.toml  test_interp.ml
src/niagara-lang/: dune  index.mld
src/niagara-utils/: date.ml  dune  index.mld  package.toml  pos.ml  pos.mli
src/proto/: dune  lexer.mll  main.ml  niagara.ml  parser.mly
src/surface/: ast.ml  dune  formatAst.ml
src/utils/: date.ml  dune  errors.ml  errors.mli  intMap.ml  intSet.ml  pos.ml  pos.mli  (+1 more)
tests/: dune  initialization.t  non_opp_qp.t  observable.t  opposition.t  stablize_input.t  sur_un_nuage.t
(+3 files in other folders)
