(menhir
 (modules parser)
 (flags -v --table)
)

(library
  (name grammar)
  (public_name niagara-lang-lib.grammar)
  (libraries
  commons
  surface
  sedlex
  menhirLib)
  (preprocess
   (pps sedlex.ppx))
)

; Grammar maintenance utilities

(rule
 (with-stdout-to
  parser.messages.new
  (run
   menhir
   %{dep:parser.mly}
   --list-errors)))

(rule
 (mode fallback)
 (action
  (copy parser.messages.new parser.messages)))

(rule
 (with-stdout-to
  parserErrors.ml
  (run
   menhir
   %{dep:parser.mly}
   --compile-errors
   %{dep:parser.messages})))

(rule
 (with-stdout-to
  parser.messages.updated
  (run
   menhir
   %{dep:parser.mly}
   --merge-errors
   %{dep:parser.messages.new}
   --merge-errors
   %{dep:parser.messages})))

(rule
 (mode promote) ; doesn't works, why?
 (alias update-parser-messages)
 (action
  (diff parser.messages %{dep:parser.messages.updated})))
